[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reffix"
version = "1.0.0"
authors = [
    { name = "Zdeněk Kasner", email = "zdenek.kasner@gmail.com" },
    { name = "Ondřej Dušek", email = "tuetschek@gmail.com" },
]
description = "A tool for fixing BibTeX reference list with DBLP API."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "bibtexparser==1.2.0",
    "titlecase==2.3",
    "unidecode==1.3.4",
    "termcolor>=2.2.0",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kasnerz/reffix"
"Bug Tracker" = "https://github.com/kasnerz/reffix/issues"

[project.scripts]
reffix = "reffix.reffix:cli"
